# ironbullet

./: .gitignore  Cargo.toml  LICENSE  QUICK_START.md  QUICK_START_RC1.md  README.md  RELEASE_NOTES_0.5.3-rc1.md  RELEASE_NOTES_0.5.3.md  build.rs  start.sh  x86_64-pc-windows-llvmmingw.json
.cargo/: config.toml
.github/workflows/: email-guard.yml
configs/: example.rfx  tunnelbear.rfx
data/EXAMPLES/: Cloud.js
data/OB2/: CYBERGHOST.svb  HOTMAIL X PAYPAL.opk  NFLIX3.svb  PARAMOUNT+ TLS.opk  PAYBACK.DE LEAK.opk  deexoptions.com.svb  psn.opk
docs/: README.md
gui/: package-lock.json  package.json  svelte.config.js  vite.config.ts
gui/src/: app.css  app.html
plugins/cf-clearance/: Cargo.toml
plugins/example-plugin/: Cargo.toml
release/: release-body.json
release/IronBullet.AppDir/: AppRun  ironbullet.desktop
scripts/: build-windows.sh
sidecar/: go.mod  main.go  mitm_proxy.go  proxy.go  session.go  so_linger_unix.go  so_linger_windows.go
src/: cli.rs  config.rs  debug_test.rs  error.rs  import.rs  ipc.rs  lib.rs  main.rs
src/export/: format.rs  mod.rs  rust_codegen.rs
src/import/: helpers.rs  lolicode.rs  mod.rs  ob2_json.rs  opk.rs  security.rs  svb.rs  tests.rs
src/ipc/: block_tree.rs  browser_proxy.rs  handlers_block.rs  handlers_config.rs  handlers_file.rs  handlers_job.rs  handlers_plugin.rs  handlers_runner.rs  handlers_update.rs  mod.rs
src/pipeline/: block.rs  codegen.rs  datadome.rs  engine.rs  mod.rs  random_data.rs  tls_profiles.rs  variable.rs
src/plugin/: abi.rs  manager.rs  mod.rs
src/runner/: data_pool.rs  job.rs  mod.rs  (+4 more)
tests/: proxy_parsing_test.rs  ss_pool_test.rs
(+210 files in other folders)
